# RAGProject

./: .gitignore  README.md  main.py  pyproject.toml  requriment.txt
Documentloader/: pdfloader.py
RAG/: promptemplate.py
RAG/Loader/: pdfloader.py  webloader.py
RAG/db/: db.py
RAG/retriver/: retriver.py
RAG/spliiter/: spliting.py
VectorDB/e3b6875a-2298-4d83-90cf-fcf66d4ee90e/: index_metadata.pickle
vector-store/: chroma.sqlite3
