[project]
name = "ragproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chroma>=0.2.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.6",
    "mistralai>=2.6.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
]
